# quantoniumos

./: .gitignore  CITATION.cff  CODE_INVENTORY.md  CONTRIBUTING.md  Dockerfile  Dockerfile.papers  LICENSE  LICENSE-CLAIMS-NC.md  LICENSE.md  MATHEMATICAL_CLAIMS_INVENTORY.md  NOTICE  README.md  REPO_AUDIT.md  RESEARCH_TOOLS_SUMMARY.md  SYSTEM_STATUS_REPORT.md  THEOREMS_RFT_IRONCLAD.md  VERIFY.md  cleanup_repo.sh  pyproject.toml  quantoniumos-bootstrap.sh  requirements-core.txt  requirements-dev.txt  requirements-lock-core.txt  requirements-lock.txt  requirements-ml-extra.txt  requirements.txt  run_formal_verification.py
.github/: AGENT.md
.github/workflows/: ci.yml  release.yml  security-scan.yml  shannon_tests.yml  spdx-inject.yml
.venv-1/: pyvenv.cfg
algorithms/rft/: README_RFT.md  __init__.py
benchmarks/: chirp_benchmark_rft_vs_dct_fft.py  class_a_quantum_simulation.py  class_b_hybrid_quick.py  codec_pipeline_benchmark.py  codec_rd_curve_real.py  rft_compression_sweet_spot.py  rft_multiscale_benchmark.py  verify_quantum_simulation_fidelity.py
docs/: ARCHITECTURE.md  ARCHITECTURE_QUICKREF.md  GLOSSARY.md  HYBRID_FFT_RFT_ALGORITHM.md  INDEX.md  KNOWN_ISSUES.md  LIMITATIONS_AND_REVIEWER_CONCERNS.md  MATHEMATICAL_CLAIMS_INVENTORY.md  NON_CLAIMS.md  NOVEL_ALGORITHMS.md  RELEASE_NOTES.md  STATE.md  TECHNICAL_DETAILS.md  THEOREMS_RFT_IRONCLAD.md  VERIFY.md
docs/archive/: STATE.md
docs/guides/: FAQ.md  QUICK_START.md  RFT_AUTOMATION_README.md  SETUP_GUIDE.md
docs/licensing/: LICENSE_SPLIT.md
docs/manuals/: FAQ.md
docs/medical/: README.md
docs/patent/: PATENT_CLAIMS_IMPLEMENTATION_ANALYSIS.md
docs/project/: CLAIMS_PRACTICING_FILES.txt  NOVELTY_AUDIT_REPORT.md  PATENT_NOTICE.md  PROJECT_STRUCTURE.md  REPO_ORGANIZATION.md
docs/proofs/: DEFINITION_FIREWALL.md  PHI_RFT_MATHEMATICAL_PROOFS.md  PROOF_MAP.md  RFT_SIS_SECURITY_ANALYSIS.md  RFT_THEOREMS.md  THEOREMS_RFT_IRONCLAD.md
docs/reports/: PATENT_COMPLIANCE_REPORT.md  SECURITY_MAINTENANCE_GUIDE.md
docs/research/: TECHNICAL_SUMMARY.md
docs/scientific_domains/: CRYPTO_ANALYSIS.md  MEDICAL_FINDINGS.md
docs/technical/: API_REFERENCE.md  COMPONENT_DEEP_DIVE.md  CRYPTO_STACK.md  MIDDLEWARE_ARCHITECTURE.md  RUNBOOKS.md  SYSTEM_IMPLEMENTATION.md  TEST_AND_PROOFS_PIPELINE.md
docs/textbook/: QuantoniumOS_Textbook.tex
docs/theory/: DEFINITION_FIREWALL.md
docs/user/: README.md
docs/validation/: REPRODUCIBILITY.md
examples/: rftmw_llm_demo.py
experiments/: formal_proof_experiments.py
experiments/ascii_wall/: ascii_wall_all_variants.py  ascii_wall_h11_h20.py  ascii_wall_paper.py  ascii_wall_through_codec.py
experiments/competitors/: README.md  benchmark_compression_vs_codecs.py  benchmark_transforms_vs_fft.py
experiments/entropy/: benchmark_entropy_gap.py
experiments/fibonacci/: fibonacci_tilt_hypotheses.py
experiments/hypothesis_testing/: hybrid_mca_fixes.py  verify_h11_claims.py
experiments/runtime/: benchmark_transforms.py
experiments/sota_benchmarks/: sota_compression_benchmark.py
hardware/: RFTPU_CAPABILITIES.md  SYNTHESIS_REPORT.md  fpga_sim_test  fpga_top_tb.v  fpga_top_webfpga.v  full_coverage_tb.v  full_sim  rftpu_architecture.sv  rftpu_architecture_gen.sv  rftpu_architecture_gen_gen.sv  rftpu_sim  run_all_hw_tests.sh  run_full_verification.py  run_synth.sh  synth_report.txt  tb_rft_middleware.sv  testbench.v  theorem8_concentration_test.py
hardware/rtl/: README.md  systolic_array_v2.sv
hardware/scripts/: regenerate_kernel_rom.py
hardware/synth/: rft_kernel_synth.sv  rft_kernel_v2005.v  systolic_array_synth.v
hardware/tb/: Makefile  rftpu_test_vectors.py  systolic_array_benchmark_tb.sv  systolic_v21_16x16_tb.sv  systolic_v21_scale_benchmark_tb.sv  systolic_v2_tb.sv  (+13 more)
papers/: REPRODUCIBILITY_GUIDE.md  canonical_rft_paper.bib  canonical_rft_paper.tex  cover_letter.tex  generate_figures.py  generate_figures_revised.py  generate_tetc_figures.py  generate_tetc_figures_verified.py  tetc_paper.tex  tetc_paper_final.tex  tetc_paper_revised.tex  tetc_paper_v3.tex
papers_backup/: README.md  paper.tex
quantonium-mobile/: package-lock.json
quantonium_os_src/: README.md
scripts/: benchmark_adaptive_rft.py  benchmark_downstream_diagnostic.py  build_ieee_paper.py  build_ieee_paper_v2.py  cleanup_papers.sh  estimate_sis_security.py  generate_all_theorem_figures.py  generate_rft_gifs.py  populate_ieee_docx.py  quantonium_boot.py  run_research_suite.py  test_rft_quick.py  verify_ascii_bottleneck.py  verify_hw_sw_alignment.py  verify_rate_distortion.py  verify_soft_vs_hard_braiding.py
tests/: __init__.py  test_definitive_canonical_rft.py  test_phi_labeled_canonical_rft.py  test_rftmw_memory.py
tools/: rft_quick_reference.py
(+182 files in other folders)
