[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantoniumos"
version = "2.0.0"
authors = [
  { name="Luis M. Minier", email="lmminier@users.noreply.github.com" },
]
description = "A hybrid symbolic computing OS for quantum-inspired algorithms."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy==1.26.4",
    "scipy==1.12.0",
    "matplotlib==3.9.0",
    "pandas==2.2.2",
    "sympy==1.12",
    "qutip==4.7.6",
    "PyQt5==5.15.10",
    "qtawesome==1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "black==24.4.2",
    "flake8==7.0.0",
    "jupyterlab==4.2.1",
    "hypothesis>=6.0.0",
]
ai = [
    "torch==2.3.0",
    "transformers==4.41.1",
    "datasets==2.19.1",
    "accelerate==0.30.1",
    "peft==0.11.1",
    "trl==0.9.4",
    "bitsandbytes==0.43.1",
    "wandb==0.17.0",
    "safetensors==0.4.3",
]
image = [
    "diffusers==0.27.2",
    "Pillow==10.3.0",
    "controlnet-aux==0.0.7",
    "xformers==0.0.26.post1",
]
bio = [
    "wfdb==4.1.2",
    "pyedflib==0.1.35",
]

[project.urls]
"Homepage" = "https://github.com/LMMinier/quantoniumos"
"Bug Tracker" = "https://github.com/LMMinier/quantoniumos/issues"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "algorithms*",
  "quantonium_os_src*",
  "tools.crypto*",
]
exclude = [
  "benchmarks*",
  "data*",
  "docs*",
  "examples*",
  "experiments*",
  "hardware*",
  "papers*",
  "release*",
  "results*",
  "scripts*",
  "tests*",
  "tools.benchmarking*",
  "tools.development*",
  "ui*",
]

[tool.setuptools]
license-files = ["LICENSE.md", "LICENSE-CLAIMS-NC.md", "docs/project/CLAIMS_PRACTICING_FILES.txt"]
