[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantoniumos"
version = "2.0.0"
authors = [
  { name="Luis M. Minier", email="lmminier@users.noreply.github.com" },
]
description = "A hybrid symbolic computing OS for quantum-inspired algorithms."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26.0,<2.0",
    "scipy>=1.12.0,<2.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0,<3.0",
    "sympy>=1.12",
    "qutip>=4.7.0,<5.0",
    "PyQt5>=5.15.0",
    "qtawesome>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "black>=24.0,<25.0",
    "flake8>=7.0.0,<8.0",
    "jupyterlab>=4.2.0,<5.0",
    "hypothesis>=6.0.0",
]
benchmark = [
    "pyfftw>=0.13.0",
    "librosa>=0.10.0",
    "sounddevice>=0.4.6",
    "zstandard>=0.22.0",
    "brotli>=1.1.0",
    "lz4>=4.3.0",
    "cryptography>=42.0.0",
    "pynacl>=1.5.0",
]
ai = [
    "torch>=2.3.0",
    "transformers>=4.41.0",
    "datasets>=2.19.0",
    "accelerate>=0.30.0",
    "peft>=0.11.0",
    "trl>=0.9.0",
    "bitsandbytes>=0.43.0",
    "wandb>=0.17.0",
    "safetensors>=0.4.0",
]
image = [
    "diffusers>=0.27.0",
    "Pillow>=10.3.0",
    "controlnet-aux>=0.0.7",
    "xformers>=0.0.26",
]
bio = [
    "wfdb>=4.1.0",
    "pyedflib>=0.1.35",
]
all = [
    "quantoniumos[dev,benchmark,ai,image,bio]",
]

[project.urls]
"Homepage" = "https://github.com/LMMinier/quantoniumos"
"Bug Tracker" = "https://github.com/LMMinier/quantoniumos/issues"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "algorithms*",
  "quantonium_os_src*",
  "tools.crypto*",
]
exclude = [
  "benchmarks*",
  "data*",
  "docs*",
  "examples*",
  "experiments*",
  "hardware*",
  "papers*",
  "release*",
  "results*",
  "scripts*",
  "tests*",
  "tools.benchmarking*",
  "tools.development*",
  "ui*",
]

[tool.setuptools]
license-files = ["LICENSE", "LICENSE-CLAIMS-NC.md", "docs/project/CLAIMS_PRACTICING_FILES.txt"]
